--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,5 +1,15 @@
 {% extends 'layouts/base.html' %}
 
 {% block content %}
-    <h1>Work in progress!</h1>
+    <h1>Welcome!</h1>
+    <p>This site is a work-in-progress database of Idolmaster songs, composers, arrangers, and lyricists.</p>
+    <p>The primary purpose of this site is to document the people behind the music in Idolmaster, make observations about the music, and showcase other works that might be of interest </p>
+    <p>This site originated from a spreadsheet I maintained to note the composers' works and their similarities. </p>
+    <h2>Current to-do</h2>
+    <ul>
+        <li>Complete lyricist credits</li>
+        <li>Add songs from IDOLM@STER Radio</li>
+        <li>Readd other songs that I might have missed</li>
+        <li>Complete showcases of composers</li>
+    </ul>
 {% endblock %}
