Minimum viable product

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -9,7 +9,7 @@
     <ul>
         <li>Complete lyricist credits</li>
         <li>Add songs from IDOLM@STER Radio</li>
-        <li>Readd other songs that I might have missed</li>
+        <li>Re-add other songs that I might have missed</li>
         <li>Complete showcases of composers</li>
     </ul>
 {% endblock %}
