Add colors and alias handling

--- a/artists/templates/artists/show.html
+++ b/artists/templates/artists/show.html
@@ -33,7 +33,7 @@
                     Alias
                 </th>
                 <td>
-                    <a href="/artists/{{ alias.id }}">{{ alias.romanized_name }}</a>
+                    <a href="/artists/{{ alias.slug }}">{{ alias.romanized_name }}</a>
                 </td>
             </tr>
             {% endfor %}
