--- a/songs/templates/songs/show.html
+++ b/songs/templates/songs/show.html
@@ -46,5 +46,5 @@
         </tbody>
     </table>
     <h2>Impression</h2>
-    <p>{{ song.impression }}</p>
+    <div>{{ song.impression|safe }}</div>
 {% endblock %}
