--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -31,6 +31,9 @@
                         <a class="nav-link" href="/songs">Songs</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/idols">Idols</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/artists">Artists</a>
                     </li>
                     <li class="nav-item">
